[metadata]
name         = rdblib
version      = file: VERSION.txt
license      = 3-clause BSD
license_file = LICENSE.txt


[options]
packages = find:
namespace_packages = srw
python_requires = >= 3.6
include_package_data = true

install_requires =
    babel
    bitmath
    docopt
    # pillow 5.3.0 raises an error when reading the IBF files
    #     TIFFSetField: tempfile.tif: Unknown pseudo-tag 65538.
    pillow != 5.3
    pywin32 ; platform_system == 'Windows'
    schwarzlog
    six
    SmartConstants
    # SQLAlchemy < 1.4 tried to use "time.clock" which was removed in Python 3.7+
    # - upstream commit: https://github.com/sqlalchemy/sqlalchemy/commit/0fff647a8f1fb863ec99195a65cf6e64ce204445
    SQLAlchemy >= 1.4; platform_system == 'Windows'
    SQLAlchemy; platform_system != 'Windows'


[options.entry_points]
console_scripts =
    srw-extract-image = srw.rdblib.cli:extract_image_main
    srw-inject-pic-into-tiff = srw.rdblib.cli:inject_pic_in_tiff_img_main
    find-broken-form  = srw.rdblib.cli:find_broken_form_main
    srw-delete-image  = srw.rdblib.cli:delete_image_main


[options.extras_require]
testutil =
    colorama
    hexdump
    PythonicTestcase
testing =
    ddt
    freezegun
    # shippable runs tests as "root" so permission checks don't work with pyfakefs >= 3.5.4
    # https://github.com/jmcgeheeiv/pyfakefs/issues/474
    # https://github.com/jmcgeheeiv/pyfakefs/commit/5e55a35937f9d426b12f4dd7d850995aafa3e062
    pyfakefs >= 3.6
    # >= 1.1: ability to pass FakeFS.set_up(allow_root_user=False), see pyfakefs requirement
    FakeFSHelpers >= 1.1
    PythonicTestcase >= 1.1.0  # assert_raises with context_manager
    testfixtures


[options.packages.find]
exclude =
    *.test
    *.tests

